--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "faker": "^3.1.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.12"
   }
